--- a/src/main/resources/templates/auto-add.html
+++ b/src/main/resources/templates/auto-add.html
@@ -9,7 +9,7 @@
 <header th:include="nav :: header"/>
 <div class="container mt-5 mb-5">
     <h1 th:text="${title}"></h1>
-    <form action="/auto/add" method="POST">
+    <form action="/auto/add" method="POST" class="alert alert-info mt-2">
         <input type="text" name="name" placeholder="Марка" class="form-control mt-2"/>
         <input type="text" name="model" placeholder="Модель" class="form-control mt-2"/>
         <input type="text" name="year" placeholder="Год выпуска" class="form-control mt-2"/>
