correct README.md

--- a/BackOffice/src/main/resources/templates/home.html
+++ b/BackOffice/src/main/resources/templates/home.html
@@ -15,7 +15,7 @@
                 <p class="lead text-body-secondary">Данная площадка разработана для приема, обработки и хранения данных об автомобилях.</p>
                 <p>
                     <a href="/auto" class="btn btn-primary my-2">Автомобили в БД</a>
-                    <a href="http://127.0.0.1:8090/api/cars/generateRandom" target="_blank" class="btn btn-secondary my-2">Сгенерировать автомобили</a>
+                    <a href="http://127.0.0.1:8090/cars/generate" target="_blank" class="btn btn-secondary my-2">Сгенерировать автомобили</a>
                 </p>
             </div>
         </div>
